[package]
name = "matchbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
axum = "0.7.4"
axum-macros = "0.4.1"
derive_builder = "0.20.0"
firecracker-config-rs = { path = "../firecracker-config-rs/" }
hyper = { version = "0.14", features = ["client", "http2"] }
hyperlocal = "0.8.0"
nanoid = "0.4.0"
netns-rs = "0.1.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
users = "0.11.0"
uuid = { version = "1.7.0", features = ["v4"] }
spark = { path  = "../spark" }
tonic = "0.11.0"
