[package]
name = "spark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spark-server"
path = "src/bin/server.rs"


[[bin]]
name = "spark-client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1.0.80"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
